New Repo + Portfolio Site + Browser Extension MP1

--- a/cs_egypt.html
+++ b/cs_egypt.html
@@ -26,6 +26,7 @@
         <a href = "writing.html"> Writing </a>
         <a href = "#graphics"> Graphics </a>
         <a href = "#contact"> Contact </a>
+        <a href = "writeups.html"> Class </a>
     </div>
   
     <div class="title">
