--- a/writing.html
+++ b/writing.html
@@ -26,6 +26,8 @@
         <a href="writing.html"> Writing </a>
         <a href="#graphics"> Graphics </a>
         <a href="#contact"> Contact </a>
+        <a href = "writeups.html"> Class </a>
+
     </div>
 
     <div class="container">
