--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a href = "writing.html"> Writing </a>
       <a href = "#graphics"> Graphics </a>
       <a href = "#contact"> Contact </a>
+      <a href = "writeups.html"> Class </a>
     </div>
 
     <div class="profile">
