--- a/learn_more.html
+++ b/learn_more.html
@@ -22,22 +22,21 @@
 <body>
     <div class="navbar">
         <a href="index.html"> Home </a>
-        <a href="case_study_home.html"> Case Studies </a>
+        <a href="case_study_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
         <a href="#graphics"> Graphics </a>
         <a href="#contact"> Contact </a>
-        <a href = "writeups.html"> Class </a>
     </div>
 
     <div class="greetings">
-        <span class="chamorro"> Håfa Adai & <span class="korean"> 안녕하세요! </span> </span>
+        <span class="chamorro"> Hello & Håfa Adai ! </span>
     </div>
 
     <div class="p1">
         <div class="ui_4"></div>
 
         <p>
-            Hello! My name is Kevin Min. Growing up on the island, my parents raised me in a traditional
+            My name is Kevin Min. Growing up on the island, my parents raised me in a traditional
             household, while I was a part of a larger diverse community that
             fostered a truly unique experience as I was exposed to a multitude of
             different cultures. Through the support of my community, I grew a deep
@@ -51,7 +50,7 @@
 
         <div class="banner1">
             <div class="banner_text">
-                <span class="text_1"> GUÅHAN </span> <span class="text1"> (Guam) </span>
+                <span class="text_1"> Guåhan </span> <span class="text1"> (Guam) </span>
             </div>
             <div class="p2_text">
                 <p>
@@ -64,7 +63,7 @@
 
             <div class="banner2">
                 <div class="banner_text2">
-                    <span class="text_2"> CASHMERE </span> <span class="text2"> ("Keshi") </span>
+                    <span class="text_2"> Cashmere </span> <span class="text2"> (Keshi) </span>
                 </div>
             </div>
         </div>
@@ -73,9 +72,11 @@
     <div class="p3">
         <div class="ui_5"></div>
         <p>
-            Besides academic aspirations, I am also a passionate writer with a background in journalism at The Daily and an
-            experienced graphic designer. Outside of my professional career, I love writing critical analysis of my favorite movies,
-            watching any cartoon or anime, listening to R&B music, playing PC games, and spending time with my cat, Cashmere.
+            Besides academic aspirations, I am also a writer with a background in journalism at The Daily UW and a graphic
+            designer. I am also currently exploring storyboarding, animation, and game dev. as my passion endeavors. Outside of my professional
+            career, I love writing critical analyses of my favorite movies,
+            watching cartoons and animes, listening to R&B music, playing PC games, and spending time with my cat,
+            Cashmere.
         </p>
 
         <img src="cashmere.png" class="img2" alt="Cashmere (Keshi)">
@@ -100,4 +101,5 @@
     </div>
 
 </body>
+
 </html>
