--- a/writing.html
+++ b/writing.html
@@ -22,11 +22,10 @@
 <body>
     <div class="navbar">
         <a href="index.html"> Home </a>
-        <a href="case_study_home.html"> Case Studies </a>
+        <a href="case_study_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
         <a href="#graphics"> Graphics </a>
         <a href="#contact"> Contact </a>
-        <a href = "writeups.html"> Class </a>
 
     </div>
 
