--- a/case_study_home.html
+++ b/case_study_home.html
@@ -10,50 +10,41 @@
         @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
         @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap");
         @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap");
-
-        body {
-            background-color: #f8f8ff;
-        }
     </style>
 </head>
 
 <body>
     <div class="navbar">
         <a href="index.html"> Home </a>
-        <a href="case_study_home.html"> Case Studies </a>
+        <a href="case_study_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
         <a href="#graphics"> Graphics </a>
         <a href="#contact"> Contact </a>
-        <a href = "writeups.html"> Class </a>
     </div>
 
     <div class="welcome">
         <p class='first_text' style="font-weight: bolder;"> PROJECT GALLERY </p>
-        <p style="font-weight: normal;"> Click on any title to see more! </p>
     </div>
 
-    <div class="slider">
-        <div class="slide" id="slide-1">
+    <div class="grid-container">
+        <div class="grid-item">
             <img src="Travelers_in_Egypt_Logo.jpg" onclick="window.open('cs_egypt.html')">
         </div>
-        <div class="slide" id="slide-2">
-            <img src="Ellipse 4.png">
+        <div class="grid-item">
+            <img src="MP0_Title.jpg" onclick="window.open('mp0.html')">
         </div>
-        <div class="slide" id="slide-3">
-            <img src="guam.png">
+        <div class="grid-item">
+            <img src="MP1_Title.jpg" onclick="window.open('mp1.html')">
         </div>
-        <div class="slide" id="slide-4">
-            <img src="cashmere.png">
+        <div class="grid-item">
+            <img src="MP2_Title.jpg" onclick="window.open('mp0.html')">
         </div>
-        <div class="slide" id="slide-5">
-            <img src="Ellipse 4.png">
+        <div class="grid-item">
+            <img src="MP3_Title.jpg" onclick="window.open('mp0.html')">
         </div>
-        <div class="slide" id="slide-6">
-            <img src="guam.png">
+        <div class="grid-item">
+            <img src="Ellipse 4.png" onclick="window.open('mp0.html')">
         </div>
-
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
 
 
@@ -79,3 +70,4 @@
 </body>
 
 </html>
+
