MP0 and MP1 Pages: Finished

--- a/case_study_home.html
+++ b/case_study_home.html
@@ -23,7 +23,11 @@
     </div>
 
     <div class="welcome">
-        <p class='first_text' style="font-weight: bolder;"> PROJECT GALLERY </p>
+        <p class='first_text'> PROJECT GALLERY </p>
+    </div>
+
+    <div class="underline">
+        <div></div>
     </div>
 
     <div class="grid-container">
@@ -43,7 +47,7 @@
             <img src="MP3_Title.jpg" onclick="window.open('mp0.html')">
         </div>
         <div class="grid-item">
-            <img src="Ellipse 4.png" onclick="window.open('mp0.html')">
+            <img src="cheatsheet.jpg" onclick="window.open('mp0.html')">
         </div>
     </div>
 
