--- a/mp1.html
+++ b/mp1.html
@@ -26,17 +26,17 @@
 
         <div class="mp_1">
             <div class="title">
-                <p> MP#1 Write-Up: </p>
+                <p> MP1 Write-Up: Browser Extension</p>
             </div>
             <div class="usage">
-                1. Overview & Usage
+                1. Overview & Usage:
             </div>
             <div class="usage_content">
                 The Chrome browser extension allows for a day/night mode, which inverts the background and text colors through a simple
                 toggle switch.
             </div>
             <div class="gif">
-                <img src="https://media.giphy.com/media/wyKgRvf7EKq3KH0rNw/giphy.gif">
+                <img src="mp1_gif.gif">
             </div>
         </div>
 
@@ -44,47 +44,36 @@
             <div class="dev">
                 2. Development Process
             </div>
-            <div class="dev_content1">
+            <div class="dev_content">
                 • Created a manifest.json file <br>
                 • Duplicated Google’s json content into manifest.json <br>
                 • Wrote the code for the popup HTML/CSS <br>
-            </div>
-
-
-            <div>
-                <span>
-                    <img id="browser_init" src="browser_init.png" alt="Initial HTML Code">
-                </span>
-
-                <span>
-                    <img id="browser_html" src="browser_html.png" alt="Updated Code">
-                </span>
-            </div>
-
-
-            <div class="dev_2">
                 • Created a JS file for the popup <br>
                 • Connected the popup HTML/CSS with JS <br>
                 • Created a content-script file with another JS file <br>
+            </div>
+        </div>
 
+        
+        <div class="slideshow-container">
+            <div class="slide">
+              <img src="browser_css.png">
             </div>
 
-            <div>
-                <span>
-                    <img id="browser_init2" src="browser_init2.png" alt="Initial Extension Design">
-                </span>
-    
-                <span>
-                    <img id="browser_toggle" src="browser_toggle.png" alt="Updated Design">
-                </span>
+            <div class="slide">
+              <img src="browser_html.png">
             </div>
 
+            <div class="slide">
+              <img src="browser_init.png">
+            </div>
 
-            <div class="dev_3">
-                • Wrote the JS code for the popup <br>
-                • Wrote the JS code for the content-script <br>
-                • Unpacked files into Chrome’s developer mode <br>
-                • Debugged with the browser console using console.log <br>
+            <div class="slide">
+                <img src="browser_init2.png">
+            </div>
+
+            <div class="slide">
+                <img src="browser_toggle.png">
             </div>
         </div>
 
@@ -150,5 +139,6 @@
                 </div>
             </footer>
         </div>
+        <script src="mp1.js"> </script>
     </body>
 </html>
