--- a/mp0.html
+++ b/mp0.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -19,7 +21,7 @@
 <body>
     <div class="navbar">
         <a href="index.html"> Home </a>
-        <a href="case_study_home.html"> Projects </a>
+        <a href="project_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
         <a href="#contact"> Contact </a>
     </div>
