--- a/mp1.html
+++ b/mp1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <link rel="stylesheet" href="./mp1.css" Type="text/css" media="all"/>
@@ -18,7 +20,7 @@
     <body>
         <div class="navbar">
             <a href="index.html"> Home </a>
-            <a href = "case_study_home.html"> Projects </a>
+            <a href = "project_home.html"> Projects </a>
             <a href = "writing.html"> Writing </a>
             <a href = "#contact"> Contact </a>
         </div>
