--- a/mp2.html
+++ b/mp2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>  
+<html>
 
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
@@ -156,22 +156,55 @@
     </div>
   </div>
 
+  <div class="deep_dive">
+    <div>
+      3. Issue Deep-Dive
+    </div>
+    <div id="issue">
+      I was having difficulties with the last project as I was unsure how to approach its domain. Using my previous
+      projects, I implemented the structure and syntax of the code into the new one, which allowed me to have a
+      foundation to work on.
+    </div>
+  </div>
+
+  <div>
+    <div id="ideas">
+      4. Ideas and Future Work
+    </div>
+    <div id="changes">
+      • P5-based Browser Extension <br>
+    </div>
+  </div>
+
+  <div>
+    <div id="kudos">
+      5. Kudos
+    </div>
+    <div id="help">
+      Matt DesLauriers' demo galleries were a huge help and a direct inspiration for my projects. I adopted many of
+      their code structures and syntax into my own.: <br>
+      • https://p5-demos.glitch.me/ <br>
+      • https://tone-demos.glitch.me/ <br>
+    </div>
+  </div>
+
   <div id="page-container">
     <footer id="footer">
-        <div id="content-wrap">
-            <a onclick="window.open('https://www.instagram.com/kevxmin/')" target="_blank">
-                <img src="insta.png"></img>
-            </a>
+      <div id="content-wrap">
+        <a onclick="window.open('https://www.instagram.com/kevxmin/')" target="_blank">
+          <img src="insta.png"></img>
+        </a>
 
-            <a onclick="window.open('https://www.linkedin.com/in/kevxmin/')" target="_blank">
-                <img src="linkedin.png"></img>
-            </a>
+        <a onclick="window.open('https://www.linkedin.com/in/kevxmin/')" target="_blank">
+          <img src="linkedin.png"></img>
+        </a>
 
-            <a onclick="window.open('https://twitter.com/astroboykev/')" target="_blank">
-                <img src="twitter.png"></img>
-            </a>
-        </div>
+        <a onclick="window.open('https://twitter.com/astroboykev/')" target="_blank">
+          <img src="twitter.png"></img>
+        </a>
+      </div>
     </footer>
   </div>
 </body>
+
 </html>
