--- a/cs_egypt.html
+++ b/cs_egypt.html
@@ -24,7 +24,7 @@
         <a href="index.html"> Home </a>
         <a href = "project_home.html"> Projects </a>
         <a href = "writing.html"> Writing </a>
-        <a href = "#contact"> Contact </a>
+        <a href = "contact.html"> Contact </a>
     </div>
   
     <div class="title">
@@ -54,6 +54,6 @@
     </div>
 
     <div>
-
+        
     </div>
 </body>
