--- a/project_home.html
+++ b/project_home.html
@@ -18,7 +18,7 @@
         <a href="index.html"> Home </a>
         <a href="project_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
-        <a href="#contact"> Contact </a>
+        <a href="contact.html"> Contact </a>
     </div>
 
     <div class="welcome">
