--- a/writing.html
+++ b/writing.html
@@ -24,7 +24,7 @@
         <a href="index.html"> Home </a>
         <a href="case_study_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
-        <a href="#contact"> Contact </a>
+        <a href="contact.html"> Contact </a>
 
     </div>
 
