Resume Button Added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </div>
 
 
-    <button class="button button" onclick="window.location.href = 'learn_more.html';"> Learn More </button>
+    <button class="button" onclick="window.location.href = 'learn_more.html';"> Learn More </button>
+    <button class="button2" onclick="window.open('resume.pdf')">Resume</button>
+
 
     <div id="page-container">
       <footer id="footer">
