--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <div class="wrap">
       <div class="item">
         <p> 
-          I like designing simple and clean 
-          interfaces. I also like storytelling.
+          Welcome! I enjoy storytelling through Community, Design, and Narrative
         </p>
       </div>
     </div>
@@ -70,6 +69,7 @@
               <a onclick="window.open('https://twitter.com/astroboykev/')" target="_blank">
                   <img src="twitter.png"></img>
               </a>
+              
           </div>
       </footer>
   </div>
