--- a/project_home.html
+++ b/project_home.html
@@ -39,10 +39,10 @@
             <img src="MP2_Title.jpg" onclick="window.open('mp2.html')">
         </div>
         <div class="grid-item">
-            <img src="MP3_Title.jpg" onclick="window.open('mp0.html')">
+            <img src="MP3_Title.jpg" onclick="window.open('mp3.html')">
         </div>
         <div class="grid-item">
-            <img src="cheatsheet.jpg" onclick="window.open('mp0.html')">
+            <img src="Final_Project_Title.jpg" onclick="window.open('final_project.html')">
         </div>
     </div>
 
