Visuals for Final

--- a/final_project.html
+++ b/final_project.html
@@ -31,7 +31,10 @@
 
     <div class="project">
         <div class="title">
-            <p> Pokemon/Genshin-Inspired RPG Game </p>
+            <p> Pokemon-Inspired RPG Game </p>
+        </div>
+        <div class="project_img">
+            <img src="final_img1.png">
         </div>
         <div id="game-container">
             <a href="https://play.unity.com/mg/other/pokemon-rpg" target="_blank" class="game-button">CLICK HERE TO
@@ -99,6 +102,10 @@
         • Add environmental factors and weather changes that affect gameplay.
     </div>
 
+    <div class="project_img">
+        <img src="map.png">
+    </div>
+    
     <div class="prototype">
         <p> Project Prototype </p>
     </div>
@@ -193,6 +200,14 @@
         </div>
     </div>
 
+    <div>
+        <div class="preview">
+            <img src="game_preview.gif">
+        </div>
+    </div>
+
+
+
     <div class="final">
         <p> Final Project </p>
     </div>
@@ -246,6 +261,12 @@
         </div>
         <div id="help">
             • https://docs.unity3d.com/Manual/index.html <br>
+        </div>
+    </div>
+
+    <div>
+        <div class="preview">
+            <img src="battle_sequence.gif">
         </div>
     </div>
 </div>
