--- a/project_home.html
+++ b/project_home.html
@@ -15,58 +15,57 @@
 
 <body>
     <div class="navbar">
-        <a href="index.html"> Home </a>
-        <a href="project_home.html"> Projects </a>
-        <a href="writing.html"> Writing </a>
-        <a href="contact.html"> Contact </a>
+        <a href="index.html">Home</a>
+        <a href="project_home.html">Projects</a>
+        <a href="writing.html">Writing</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div class="welcome">
-        <p class='first_text'> PROJECT GALLERY </p>
+        <p class='first_text'>PROJECT GALLERY</p>
     </div>
 
-    <div class="grid-container">
-        <div class="grid-item">
-            <img src="Travelers_in_Egypt_Logo.jpg" onclick="window.open('cs_egypt.html')">
+    <div id="content-wrap">
+        <div class="image-container">
+            <img src="Travelers_in_Egypt_Logo.png" onclick="window.open('cs_egypt.html')">
         </div>
-        <div class="grid-item">
-            <img src="MP0_Title.jpg" onclick="window.open('mp0.html')">
+        <div class="image-container">
+            <img src="portfolio_title.png" onclick="window.open('mp0.html')">
         </div>
-        <div class="grid-item">
-            <img src="MP1_Title.jpg" onclick="window.open('mp1.html')">
+        <div class="image-container">
+            <img src="browser_title.png" onclick="window.open('mp1.html')">
         </div>
-        <div class="grid-item">
-            <img src="MP2_Title.jpg" onclick="window.open('mp2.html')">
+        <div class="image-container">
+            <img src="p5_title.png" onclick="window.open('mp2.html')">
         </div>
-        <div class="grid-item">
-            <img src="MP3_Title.jpg" onclick="window.open('mp3.html')">
+        <div class="image-container">
+            <img src="pong_title.png" onclick="window.open('mp3.html')">
         </div>
-        <div class="grid-item">
-            <img src="Final_Project_Title.jpg" onclick="window.open('final_project.html')">
+        <div class="image-container">
+            <img src="rpg_title.png" onclick="window.open('final_project.html')">
         </div>
     </div>
 
+    <footer id="footer">
+        <div id="social-icons">
+            <a onclick="window.open('https://www.instagram.com/kevxmin/')" target="_blank">
+                <img src="insta.png"></img>
+            </a>
 
-    <div id="page-container">
-        <footer id="footer">
-            <div id="content-wrap">
-                <a onclick="window.open('https://www.instagram.com/kevxmin/')" target="_blank">
-                    <img src="insta.png"></img>
-                </a>
+            <a onclick="window.open('https://www.linkedin.com/in/kevxmin/')" target="_blank">
+                <img src="linkedin.png"></img>
+            </a>
 
-                <a onclick="window.open('https://www.linkedin.com/in/kevxmin/')" target="_blank">
-                    <img src="linkedin.png"></img>
-                </a>
+            <a onclick="window.open('https://twitter.com/astroboykev/')" target="_blank">
+                <img src="twitter.png"></img>
+            </a>
+        </div>
+    </footer>
 
-                <a onclick="window.open('https://twitter.com/astroboykev/')" target="_blank">
-                    <img src="twitter.png"></img>
-                </a>
-            </div>
-        </footer>
-    </div>
-
-    <script src="case_study_home.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./project_home.js"></script>
 </body>
 
 </html>
+
 
