Fixed Writing -> Project Home

--- a/writing.html
+++ b/writing.html
@@ -22,7 +22,7 @@
 <body>
     <div class="navbar">
         <a href="index.html"> Home </a>
-        <a href="case_study_home.html"> Projects </a>
+        <a href="project_home.html"> Projects </a>
         <a href="writing.html"> Writing </a>
         <a href="contact.html"> Contact </a>
 
